Add module `libcommon-util-kotlin` to provides more kotlin utility extensions.